# 4sem_2_vtk

./: CMakeLists.txt  README.md  bug3d_wave.cpp  bug3d_wave_move.cpp
